--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -18,7 +18,6 @@
             left: 50%;
             transform: translate(-50%, -50%);
             color: var(--main-background-color);
-
             text-shadow: 1px 1px 0 rgba(53, 53, 53, 0.1), 1px -1px 0 rgba(53, 53, 53, 0.1), -1px 1px 0 rgba(53, 53, 53, 0.1), -1px -1px 0 rgba(53, 53, 53, 0.1), 1px 0px 0 rgba(53, 53, 53, 0.1), 0px 1px 0 rgba(53, 53, 53, 0.1), -1px 0px 0 rgba(53, 53, 53, 0.1), 0px -1px 0 rgba(53, 53, 53, 0.1);
 
         }
@@ -47,12 +46,27 @@
             cursor: pointer;
             display: flex;
             justify-content: center;
+            margin-bottom: 150px;
+            -webkit-tap-highlight-color: transparent !important;
+            width: -webkit-fit-content;
+            width: -moz-fit-content;
+            width: fit-content;
+            background: #fff;
+            border-radius: 1000px;
+            box-shadow: 0 6px 16px rgba(0, 0, 0, .12) !important;
+            border: none;
 
             span {
-                align-self: center
+                align-self: center;
+                margin: 0;
+                padding: 16px 32px;
+                font-size: 28px;
+                font-family: circular-medium;
+                background: -webkit-linear-gradient(90deg, #6f019c, #c6017e 135.12%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
             }
 
-            ;
 
             &:hover {
                 border: 1px solid var(--font-dark-color);
@@ -62,6 +76,14 @@
 
 
         }
+    }
+
+    h3 {
+        font-family: circular-medium;
+    }
+
+    h4 {
+        margin-top: 10px;
     }
 
     .home-become-host {
@@ -77,6 +99,7 @@
             display: inline-block;
             position: relative;
             left: -35%;
+
             .centered {
                 margin-bottom: 0;
                 font-family: circular-medium;
@@ -85,36 +108,53 @@
                 // color: greenyellow;
                 color: var(--logo-color);
                 text-shadow: 1px 1px 0 rgba(53, 53, 53, 0.1), 1px -1px 0 rgba(53, 53, 53, 0.1), -1px 1px 0 rgba(53, 53, 53, 0.1), -1px -1px 0 rgba(53, 53, 53, 0.1), 1px 0px 0 rgba(53, 53, 53, 0.1), 0px 1px 0 rgba(53, 53, 53, 0.1), -1px 0px 0 rgba(53, 53, 53, 0.1), 0px -1px 0 rgba(53, 53, 53, 0.1);
+                color: #fff;
+                font-size: 48px;
             }
-            
+
+
             .button {
-                margin-top: 25px;
+                margin-top: 75px;
                 position: absolute;
                 text-align: center;
-                font-size: 28px;
-                transform: translateX(-50%);
-                // bottom: 35%;
-                left: 50%;
-                // transform: translate(-50%, -50%);
+                font-size: 36px;
+                left: 45%;
+                transform: translate(-50%, -50%);
                 background-color: var(--main-background-color);
                 border-radius: 50px;
-                width: 280px;
-                height: 50px;
-                border: 1px solid var(var(--main-background-color));
-                cursor: pointer;
-                justify-content: center;
+                width: 320px;
+                height: 70px;
                 display: flex;
-                // top: 35%;              
-    
+                -webkit-tap-highlight-color: transparent !important;
+                width: -webkit-fit-content;
+                width: -moz-fit-content;
+                width: fit-content;
+                background: #fff;
+                border-radius: 1000px;
+                box-shadow: 0 6px 16px rgba(0, 0, 0, .12) !important;
+                border: none;
+
                 span {
+                    font-family: circular-medium;
                     align-self: center;
+                    margin: 0;
+                    padding: 16px 32px;
+                    font-size: 28px;
+                   
+                    background: -webkit-linear-gradient(90deg, #6f019c, #c6017e 135.12%);
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
                 }
-                    
+
+
                 &:hover {
                     border: 1px solid var(--font-dark-color);
                     box-shadow: 0 0 0 1px var(--scores-background-color);
                     transition: 0.3s;
-                }    
+                }
+
+
+
             }
         }
     }
@@ -122,13 +162,18 @@
     .destinations-container {
         position: relative;
         display: block;
-        margin-top: 750px;
+        margin-top: 730px;
         // height: 60vh;
         grid-column: 2;
         grid-row: 2;
         text-align: center;
         width: 100%;
         justify-content: space-evenly;
+
+        h3 {
+            margin-bottom: 50px;
+            font: circular-medium !important;
+        }
 
         .destinations-cards-container {
             width: 100%;
