--- a/src/styles/components/stay-page/stay-order.scss
+++ b/src/styles/components/stay-page/stay-order.scss
@@ -2,7 +2,7 @@
     .stay-order {
         flex-direction: column;
         justify-content: center;
-        width: 300px;
+        width: 335px;
         // background-color: var(--main-background-color);
         // border: 1px solid var(--font-dark-color);
         border-radius: 12px;
@@ -257,3 +257,15 @@
                 rgb(189, 30, 89) 100%);
     }
 }
+
+// .rdrDateDisplayWrapper{
+//     display: none;
+// }
+
+// .rdrCalendarWrapper{
+//     width: 100%;
+// }
+
+// .rdrMonth{
+//     width: 100%;
+// }
