--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -37,6 +37,7 @@
 @import 'components/stay-page/amenities-modal.scss';
 @import 'components/stay-page/order-msg-modal.scss';
 @import 'components/stay-page/add-review.scss';
+@import 'components/stay-page/calandar.scss';
 
 // host
 @import 'components/host.scss';
