--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -153,12 +153,14 @@
     max-width: 350px;
     max-height: 350px;
     aspect-ratio: 1/1 !important;
+    
     overflow: hidden;
 
     .img-preview {
         width: 100%;
         aspect-ratio: 1/1;
         margin-top: 0;
+        border-radius: 20px;
         border-radius: 20px;
     }
 
