--- a/src/styles/components/explore/explore-filter.scss
+++ b/src/styles/components/explore/explore-filter.scss
@@ -37,6 +37,7 @@
             border: 1px solid var(--font-gray-color);
             box-shadow: 0 0 2px var(--font-lightgray-color);
             cursor: pointer;
+            margin-left: 0;
 
             span {
                 align-self: center;
@@ -58,6 +59,7 @@
             border: 1px solid var(--font-gray-see-throw-color);
             box-shadow: 0px 4px 10px var(--font-lightgray-color);
             cursor: pointer;
+            margin-left: 0;
 
             span {
                 align-self: center;
