--- a/src/styles/components/explore/stay-list.scss
+++ b/src/styles/components/explore/stay-list.scss
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin: 0;
 }
 
 .stay-list {
@@ -26,4 +26,3 @@
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 
 }
-
