--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -15,12 +15,11 @@
         .stay-preview {
             // height: 370px;
             align-items: center;
-            max-width: 350px;
+            width: 100%;
             margin-bottom: 20px;
             line-height: 18px;
             border-radius: 20px;
             margin: auto ;
-            // row-gap: 10px;
             cursor: pointer;
 
             h3 {
@@ -150,8 +149,7 @@
 .explore-img-container {
     padding: 0;
     margin: 0;
-    max-width: 350px;
-    max-height: 350px;
+    width: 100%;
     aspect-ratio: 1/1 !important;
     overflow: hidden;
 
