--- a/src/styles/setup/variables.scss
+++ b/src/styles/setup/variables.scss
@@ -11,4 +11,6 @@
     --font-dark-color:rgb(61, 61, 61);
     --font-dark-color-order:rgb(34, 34, 34);
     --logo-color:rgb(255, 90, 95);
+    --logo-color-see-throw:rgba(255, 90, 95,0.8);
+
 }
