--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -466,3 +466,24 @@ label {
     height: 30px;
     width: 30px;
 }
+
+.searchber-form-label-location{
+    font-size: 12px;
+    margin-bottom: 3px;
+    font-family: circular-light;
+}
+.searchber-form-label-CheckIn{
+    font-size: 12px;
+    margin-bottom: 3px;
+    font-family: circular-light;
+}
+.searchber-form-label-CheckOut{
+    font-size: 12px;
+    margin-bottom: 3px;
+    font-family: circular-light;
+}
+.searchber-form-label-Guests{
+    font-size: 12px;
+    margin-bottom: 3px;
+    font-family: circular-light;
+}
