--- a/src/styles/components/stay-page/stay-order.scss
+++ b/src/styles/components/stay-page/stay-order.scss
@@ -58,10 +58,12 @@
         }
 
         // .order-calander {
-        //     position: relative;
-        //     display: block;
-        //     width: 100%;
-        //     height: 100px;
+        //     .calander-modal {
+        //         position: relative;
+        //         display: block;
+        //         width: 100%;
+        //         height: 0;
+        //     }
         // }
 
 
