--- a/src/styles/components/stay-page/order-msg-modal.scss
+++ b/src/styles/components/stay-page/order-msg-modal.scss
@@ -90,9 +90,8 @@
         gap: 15px;
     }
 
-    .order-added-msg {
-        // font-size: 16px;
-    }
+    // .order-added-msg {
+    // }
 
     .order-modal-btn {
         z-index: 5;
