new date picker

--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -64,6 +64,11 @@
                     // margin-left: 5px;
                     gap: 5px;
 
+                    input {
+                        padding-top: 0;
+                        height: 20px;
+                    }
+
                     .srchbtn {
                         img {
                             margin-right: 4px;
