--- a/src/styles/components/stay-page/stay-order.scss
+++ b/src/styles/components/stay-page/stay-order.scss
@@ -35,6 +35,10 @@
                     }
                 }
 
+                .reviews{
+                    font-weight: bold;  
+                }
+
             }
 
             >* {
@@ -57,14 +61,14 @@
             }
         }
 
-        // .order-calander {
-        //     .calander-modal {
-        //         position: relative;
-        //         display: block;
-        //         width: 100%;
-        //         height: 0;
-        //     }
-        // }
+        .order-calander {
+            border-radius: 5px;
+            overflow: hidden;
+
+            .date-ranger{
+                border-radius: 0px;
+            }
+        }
 
 
         // .calander {
@@ -81,13 +85,14 @@
 
         .guests-btn {
             border: 1px solid var(--font-lightgray-color);
-            border-radius: 0 0 10px 10px !important;
+            border-radius: 0 0 5px 5px !important;
             display: flex;
             flex-direction: column;
             align-items: center;
             font-size: 20px;
             cursor: pointer;
             overflow: hidden;
+
 
             .guests-number {
                 display: flex;
@@ -306,9 +311,7 @@
     display: flex;
 }
 
-.react-datepicker__input-container {
-    
-}
+.react-datepicker__input-container {}
 
 .react-datepicker-wrapper {
 
