--- a/src/styles/components/stay-page/calandar.scss
+++ b/src/styles/components/stay-page/calandar.scss
@@ -24,3 +24,20 @@
         }
     }
 }
+
+.css-bkrceb-MuiButtonBase-root-MuiPickersDay-root.Mui-selected {
+    background-color: var(--logo-color) !important;
+}
+
+.css-1sumxir-MuiFormLabel-root-MuiInputLabel-root {
+    color: var(--font-gray-see-throw-color);
+}
+
+#\:r3\:-label {
+        border-color: var(--logo-color);
+        outline-color: var(--logo-color);
+        border-radius: 0;
+}
+.css-1sumxir-MuiFormLabel-root-MuiInputLabel-root.Mui-Focused{
+    color:var(--logo-color) !important;
+}
