--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -26,12 +26,6 @@
             justify-content: space-between;
             cursor: pointer;
 
-            // .searchbar-container {
-            //     align-self: flex-end;
-            //     // display: flex;
-            //     // justify-content: end;
-            //     // transition: 0.6s;
-            // }
             .header-navbar-container {
                 align-self: flex-start;
                 display: flex;
@@ -150,29 +144,30 @@
                 .logo-img {
                     height: 50px;
                     align-self: center;
+                    margin-right: 5px;
                 }
 
                 .whiteLogoTxt {
-                    height: 50px;
+                    // height: 50px;
                     display: flex;
-                    justify-content: flex-end;
-                    padding-top: 10px;
+                    justify-content: center;
+                    // padding-top: 10px;
                     margin: 0;
-                    align-self: flex-end;
+                    align-self: center;
                     font-family: circular-extra;
-                    font-size: 42px;
+                    font-size:32px;
                     color: var(--main-background-color);
                 }
 
                 .logoTxt {
-                    height: 50px;
+                    // height: 50px;
                     display: flex;
-                    justify-content: flex-end;
-                    padding-top: 10px;
+                    justify-content:center;
+                    // padding-top: 10px;
                     margin: 0;
-                    align-self: flex-end;
+                    align-self: center;
                     font-family: circular-extra;
-                    font-size: 42px;
+                    font-size: 32px;
                     color: var(--logo-color);
                 }
             }
