--- a/src/styles/components/stay-page/calandar.scss
+++ b/src/styles/components/stay-page/calandar.scss
@@ -49,3 +49,6 @@
 #root > div > main > div > section.list-container > section > section > div.explore-img-container > div.carousel-root > div > button.control-arrow.control-next{
     background:none;
 }
+#root > div > main > div > section.list-container > section > section > div.explore-img-container > div.carousel-root > div > button.control-arrow.control-prev{
+    background:none;
+}
