--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -151,15 +151,16 @@
     margin: 0;
     width: 100%;
     aspect-ratio: 1/1 !important;
-    
+    border-radius: 20px;
     overflow: hidden;
+
 
     .img-preview {
         width: 100%;
         aspect-ratio: 1/1;
         margin-top: 0;
-        border-radius: 20px;
-        border-radius: 20px;
+        // border-radius: 20px;
+        // border-radius: 20px;
     }
 
     .heart-btn {
