--- a/src/styles/components/user-back-office/user-back-office.scss
+++ b/src/styles/components/user-back-office/user-back-office.scss
@@ -210,6 +210,7 @@
 
     display: flex;
     align-items: flex-start;
+    justify-content: space-between;
 
     // justify-content: space-evenly;
     gap: 10%;
@@ -217,11 +218,26 @@
     margin-bottom: 80px;
 
     .statistics-box {
+        width: 160px;
+        height: 160px;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        // justify-content: center;
         align-items: center;
-        justify-content: space-around;
+        // justify-content: space-around;
+        border: 1px solid  var(--font-lightgray-color);
+        padding: 4px;
+        border-radius: 3px;
+
+        h4 {
+            margin-left:0;
+        }
+
+        h3 {
+            // margin-bottom: 0;
+        }
+
+        
         
     }
     h4 {
@@ -231,6 +247,14 @@
 
 .order-table-head {
     font-weight: 800;
+}
+
+.static-pos {
+    color: rgb(73, 230, 73)
+}
+
+.static-neg {
+    color: rgb(255, 6, 6)
 }
 
 
