--- a/src/styles/components/user-back-office/user-back-office.scss
+++ b/src/styles/components/user-back-office/user-back-office.scss
@@ -237,6 +237,10 @@
             // margin-bottom: 0;
         }
 
+        .MuiRating-root {
+            color : var(--font-dark-color-order)
+        }
+
         
         
     }
