--- a/src/styles/components/stay-page/stay-order.scss
+++ b/src/styles/components/stay-page/stay-order.scss
@@ -80,8 +80,9 @@
         // }
 
         .guests-btn {
-            border: 1px solid var(--font-lightgray-color);
-            border-radius: 0 0 5px 5px !important;
+            border: 1px solid var(--font-gray-color);
+            border-top: unset;
+            border-radius: 0 0 4px 4px ;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -98,7 +99,7 @@
                 height: 50px;
                 width: 90%;
                 padding: 0 5%;
-                border-bottom: 1px solid var(--font-lightgray-color);
+                // border-bottom: 1px solid var(--font-lightgray-color);
                 margin: 0;
 
                 .guests-title {
@@ -305,9 +306,26 @@
 
 .date-ranger {
     display: flex;
+    // height: 60px;
+    border: 1px solid var(--font-gray-color);
+    border-radius: 4px 4px 0 0 ;
 }
-
-.react-datepicker__input-container {}
+#root > div > main > section > section.stay-details.flex.stay-gray-box-shadow > div.stay-details-order > section > div.order-calander > section.date-ranger > div:nth-child(2) > div{
+    height: 60px;
+}
+#root > div > main > section > section.stay-details.flex.stay-gray-box-shadow > div.stay-details-order > section > div.order-calander > section.date-ranger > div:nth-child(2) > div > div > fieldset{
+    border: none;
+    // height: 60px;
+    border-left: 1px solid var(--font-gray-color) ;
+    border-radius: 0;
+}
+#root > div > main > section > section.stay-details.flex.stay-gray-box-shadow > div.stay-details-order > section > div.order-calander > section.date-ranger > div:nth-child(1) > div > div > fieldset{
+    border: none;
+}
+// #root > div > main > section > section.stay-details.flex.stay-gray-box-shadow > div.stay-details-order > section > div.order-calander > section.date-ranger > div:nth-child(2) > div{
+//     margin: 0%;
+//     padding: 0%;
+// }
 
 .react-datepicker-wrapper {
 
