--- a/src/styles/components/stay-page/stay-details.scss
+++ b/src/styles/components/stay-page/stay-details.scss
@@ -21,6 +21,7 @@
             height: 20px;
             width: 38px;
             margin-right: 10px;
+            align-self: baseline;
         }
     }
 
