--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -28,6 +28,7 @@
             grid-row: 2/3;
             position: relative;
             top: 10px;
+            margin-top: 40px;
 
             h2 {
                 display: block;
@@ -44,6 +45,7 @@
             overflow: auto;
             height: 100%;
             grid-row: 1/-1;
+            margin-top: 40px;
         }
 
         .reviews-list-container {
