--- a/src/styles/components/stay-page/stay-page.scss
+++ b/src/styles/components/stay-page/stay-page.scss
@@ -134,4 +134,9 @@
         background-color: var(--main-background-color);
         cursor: pointer;
     }
+
+    .reviews-container{
+        margin-top: 40px;
+    }
 }
+
