--- a/src/styles/components/stay-page/order-msg-modal.scss
+++ b/src/styles/components/stay-page/order-msg-modal.scss
@@ -3,7 +3,7 @@
     z-index: 1000;
     padding: 20px;
     position: absolute;
-    width: 28%;
+    width: 40%;
     right: 50%;
     transform: translate(50%);
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
@@ -17,11 +17,7 @@
     // max-height: 80%;
     // background-color: var(--scores-background-color);
 
-    .order-stay-name {
-        font-size: 18px;
-        margin-bottom: 0;
-        padding-top: 0;
-    }
+
 
 
 
@@ -34,46 +30,71 @@
         font-size: 24px;
     }
 
+    .order-msg-main {
+        flex-direction: row;
+        justify-content: space-between;
 
-    .dates-order {
-        display: flex;
-        gap: 30px;
-        padding-top: 15px;
-        padding-bottom: 5%;
-        box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
+        .order-img-container {
 
-        .check-in-out {
-            display: flex;
-            gap: 10px;
-            font-size: 18px;
-            margin: 3px;
+            width: 100%;
+            height: 200px;
+            // aspect-ratio: 1/1;
+            overflow: hidden;
+            object-fit: cover;
 
-            b {
-                font-size: 16px;
+            img {
+
             }
         }
+
+        .order-stay-name {
+            font-size: 18px;
+            margin-bottom: 0;
+            padding-top: 0;
+        }
+
+        .dates-order {
+            display: flex;
+            gap: 30px;
+            padding-top: 15px;
+            padding-bottom: 5%;
+            box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
+
+            .check-in-out {
+                display: flex;
+                gap: 10px;
+                font-size: 18px;
+                margin: 3px;
+
+                b {
+                    font-size: 16px;
+                }
+            }
+        }
+
+        .order-guests {
+            flex-direction: column;
+            margin: 0;
+            padding-top: 10px;
+            padding-bottom: 5%;
+            box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
+
+            .order-guests-total {
+                display: flex;
+                gap: 10px;
+                margin: 5px;
+                font-size: 18px;
+            }
+        }
+
+
     }
 
-    .order-guests {
-        flex-direction: column;
-        margin: 0;
-        padding-top: 10px;
-        padding-bottom: 5%;
-        box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
-
-        .order-guests-total {
-            display: flex;
-            gap: 10px;
-            margin: 5px;
-            font-size: 18px;
-        }
-
-        p {
-            display: flex;
-            gap: 5px;
-            margin: 3px;
-            font-size: 18px;
-        }
+    p {
+        display: flex;
+        gap: 5px;
+        margin: 3px;
+        font-size: 18px;
     }
 
     .order-total {
