--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -16,8 +16,9 @@
         // overflow: hidden;
         border-radius: 20px;
         padding: 2%;
+        padding-top: 0;
         display: grid;
-        grid-gap: 30px 50px;
+        grid-gap: 0 50px;
         grid-template-columns: 1.5fr 2fr;
         grid-template-rows: 10% 20% 70%;
 
@@ -45,7 +46,6 @@
             overflow: auto;
             height: 100%;
             grid-row: 1/-1;
-            margin-top: 40px;
         }
 
         .reviews-list-container {
@@ -73,7 +73,7 @@
     .modal-header {
         display: flex;
         justify-content: flex-end;
-        height: 45px;
+        height: 20px;
         padding-right: 15px;
         padding-top: 15px;
 
