--- a/src/styles/components/stay-page/order-msg-modal.scss
+++ b/src/styles/components/stay-page/order-msg-modal.scss
@@ -37,13 +37,14 @@
         .order-img-container {
 
             width: 100%;
-            height: 200px;
-            // aspect-ratio: 1/1;
+            height: 300px;
+            aspect-ratio: 1/1;
             overflow: hidden;
-            object-fit: cover;
 
             img {
-
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
         }
 
