--- a/src/styles/components/stay-page/order-msg-modal.scss
+++ b/src/styles/components/stay-page/order-msg-modal.scss
@@ -8,7 +8,7 @@
     transform: translate(50%);
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
     border: 1px solid var(--font-lightgray-color);
-    border-radius: 20px;
+    border-radius: 15px;
     background-color: var(--main-background-color);
     z-index: 1000;
     // width: 500px;
@@ -25,7 +25,7 @@
         color: var(--logo-color);
         font-family: circular-bold;
         text-align: center;
-        margin: 0;
+        margin: 15px;
         padding: 15px 0;
         font-size: 24px;
     }
