--- a/src/styles/components/stay-page/order-msg-modal.scss
+++ b/src/styles/components/stay-page/order-msg-modal.scss
@@ -11,14 +11,6 @@
     border-radius: 15px;
     background-color: var(--main-background-color);
     z-index: 1000;
-    // width: 500px;
-    // border: 1px solid rgb(221, 221, 221);
-    // border-radius: 12px;
-    // max-height: 80%;
-    // background-color: var(--scores-background-color);
-
-
-
 
 
     h4 {
@@ -35,61 +27,76 @@
         justify-content: space-between;
         gap: 20px;
 
-        .order-img-container {
 
-            width: 100%;
+        .order-imgs-container {
+            width: 60%;
             height: 300px;
-            aspect-ratio: 1/1;
             overflow: hidden;
             border-radius: 15px;
+            display: grid;
+            grid-template-rows: 50% 50%;
+            grid-template-columns:  1fr 1fr;
+            gap: 2px;
 
-            img {
+            .order-img-container {
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
-            }
-        }
 
-        .order-stay-name {
-            font-size: 18px;
-            margin-bottom: 0;
-            padding-top: 0;
-        }
-
-        .dates-order {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            padding-top: 15px;
-            padding-bottom: 5%;
-            box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
-
-            .check-in-out {
-                display: flex;
-                gap: 10px;
-                font-size: 18px;
-                margin: 3px;
-
-                b {
-                    font-size: 16px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                 }
             }
         }
 
-        .order-guests {
-            flex-direction: column;
-            margin: 0;
-            padding-top: 10px;
-            padding-bottom: 5%;
-            box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
 
-            .order-guests-total {
-                display: flex;
-                gap: 10px;
-                margin: 5px;
+        .order-msg-details {
+
+            width: 40%;
+
+            .order-stay-name {
                 font-size: 18px;
+                margin-bottom: 0;
+                padding-top: 0;
+            }
+
+            .dates-order {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                padding-top: 15px;
+                padding-bottom: 5%;
+                box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
+
+                .check-in-out {
+                    display: flex;
+                    gap: 10px;
+                    font-size: 18px;
+                    margin: 3px;
+
+                    b {
+                        font-size: 16px;
+                    }
+                }
+            }
+
+            .order-guests {
+                flex-direction: column;
+                margin: 0;
+                padding-top: 10px;
+                padding-bottom: 5%;
+                box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
+
+                .order-guests-total {
+                    display: flex;
+                    gap: 10px;
+                    margin: 5px;
+                    font-size: 18px;
+                }
             }
         }
+
 
 
     }
@@ -105,6 +112,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        font-size: 20px;
         // padding: 0px 0px 20px 0px;
     }
 
@@ -113,6 +121,7 @@
         display: flex;
         justify-content: space-between;
         gap: 15px;
+        font-size: 20px;
     }
 
     // .order-added-msg {
