--- a/src/styles/components/stay-page/order-msg-modal.scss
+++ b/src/styles/components/stay-page/order-msg-modal.scss
@@ -67,7 +67,8 @@
                 gap: 10px;
                 padding-top: 15px;
                 padding-bottom: 5%;
-                box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
+                // box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
+                border-bottom: 1px solid var(--scores-background-color);
 
                 .check-in-out {
                     display: flex;
@@ -86,7 +87,8 @@
                 margin: 0;
                 padding-top: 10px;
                 padding-bottom: 5%;
-                box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
+                // box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
+                border-bottom: 1px solid var(--scores-background-color);
 
                 .order-guests-total {
                     display: flex;
