--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -67,6 +67,12 @@
             p {
                 padding-right: 10%;
             }
+
+            p {
+                line-height: 30px;
+            }
+
+
         }
     }
 
