--- a/src/styles/components/stay-page/stay-order.scss
+++ b/src/styles/components/stay-page/stay-order.scss
@@ -204,6 +204,7 @@
             padding: 0;
             height: 40px;
             justify-content: space-between;
+            font-family: circular-bold;
 
             h3 {
                 // margin-right: 10px;
